--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "anaisdhnd",
+  "name": "anja-dhnd",
   "version": "1.0.0",
   "description": "The Queen's card",
   "main": "index.js",
   "bin": {
-    "anaisdhnd": "index.js"
+    "anja-dhnd": "index.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
